--- a/styles/styles.css
+++ b/styles/styles.css
@@ -367,7 +367,7 @@ section {
 }
 .container-maintenance--copyright {
   display: flex;
-  align-items: flex-start;
+  align-items: flex-end;
   flex-direction: column;
   position: absolute;
   right: 1rem;
