--- a/styles/styles.css
+++ b/styles/styles.css
@@ -348,16 +348,30 @@ section {
   width: 100%;
   -o-object-fit: contain;
      object-fit: contain;
-}/*# sourceMappingURL=styles.css.map */
+}
+
+/*# sourceMappingURL=styles.css.map */
 
 
 /* temp css - maintenance */
 .container-maintenance {
   display: flex;
-  align-items: flex-start;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   max-height: 100vh;
   min-height: 100dvh;
+}
+.maintenance--info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: fit-content;
+  height: fit-content;
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
 }
 .maintenance--title {
   font-size: 13px;
@@ -367,16 +381,73 @@ section {
   font-size: 13px;
   line-height: 130%;
 }
+.maintenance--game-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  left: 4rem;
+  right: 4rem;
+  top: 4rem;
+  bottom: 4rem;
+}
+.maintenance--game-btn {
+  position: absolute;
+  display: flex;
+  padding: 0.5rem 1rem;
+  text-transform: uppercase;
+  font-size: 1.25rem;
+  border-radius: 100px;
+  width: fit-content;
+  height: fit-content;
+  overflow: hidden;
+  background: #001effde;
+  /* box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 ); */
+  backdrop-filter: blur( 4px );
+  -webkit-backdrop-filter: blur( 4px );
+  /* border: 1px solid rgba( 255, 255, 255, 0.18 ); */
+  cursor: pointer;
+}
+
+/* .cont-move {
+  position: absolute;
+  display: inline-grid;
+  grid-auto-columns: auto;
+  gap: 13px;
+  align-items: center;
+  justify-items: center;
+  align-content: center;
+  padding: 26px;
+  cursor: pointer;
+  color: white;
+  background-color: #141414;
+  outline: 1px solid #515151;
+  margin: 13px;
+} */
+
 .container-maintenance--copyright {
   display: flex;
-  align-items: flex-start;
+  align-items: flex-end;
   flex-direction: column;
   position: absolute;
-  left: 1rem;
+  right: 1rem;
   bottom: 1rem;
+  width: fit-content;
+  height: fit-content;
 }
 .maintenance--copyright-p {
   font-size: 13px;
   line-height: 130%;
   text-align: left;
 }
+
+#contMove {
+  /* other styles */
+  transition: background-color 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+#contMove.hidden {
+  opacity: 0;
+}
+
