--- a/styles/styles.css
+++ b/styles/styles.css
@@ -443,8 +443,8 @@ section {
 }
 
 #contMove {
-  /* other styles */
   transition: background-color 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  touch-action: none;
 }
 
 #contMove.hidden {
