--- a/styles/styles.css
+++ b/styles/styles.css
@@ -362,10 +362,12 @@ section {
   width: 100%;
   max-height: 100vh;
   min-height: 100dvh;
+  overflow: hidden;
 }
 .maintenance--info {
   display: flex;
   flex-direction: column;
+  gap: 11px;
   align-items: flex-start;
   width: fit-content;
   height: fit-content;
@@ -373,13 +375,22 @@ section {
   top: 1rem;
   left: 1rem;
 }
+.maintenance--content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: fit-content;
+  height: fit-content;
+}
 .maintenance--title {
   font-size: 13px;
   line-height: 130%;
+  text-transform: uppercase;
 }
 .maintenance--message {
   font-size: 13px;
   line-height: 130%;
+  color: #001eff;
 }
 .maintenance--game-container {
   display: flex;
@@ -391,6 +402,7 @@ section {
   right: 4rem;
   top: 4rem;
   bottom: 4rem;
+  z-index: 1;
 }
 .maintenance--game-btn {
   position: absolute;
@@ -403,30 +415,206 @@ section {
   height: fit-content;
   overflow: hidden;
   background: #001effde;
-  /* box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 ); */
   backdrop-filter: blur( 4px );
   -webkit-backdrop-filter: blur( 4px );
-  /* border: 1px solid rgba( 255, 255, 255, 0.18 ); */
+  cursor: pointer;
+  opacity: 1;
+}
+.maintenance--game-btn:hover {
+  opacity: 0.75;
+  transition: opacity 0.3s;
+}
+
+.maintenance--form-overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--background-color-primary);
+  z-index: 1;
+  opacity: 0.5;
   cursor: pointer;
 }
 
-/* .cont-move {
-  position: absolute;
-  display: inline-grid;
-  grid-auto-columns: auto;
-  gap: 13px;
+.maintenance-container--form {
+  position: relative;
+  left: 0;
+  transition: left 1s;
+  display: flex;
+  gap: 0;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 360px;
+  height: fit-content;
+  text-align: left;
+  border: 1px solid white;
+  border-radius: 0.5rem;
+  z-index: 3;
+  background-color: #14141436;
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+}
+
+@media screen and (max-width: 640px) {
+  .maintenance-container--form {
+    width: 100%;
+  }
+}
+
+.maintenance--input {
+  display: grid;
+  grid-template-columns: 82px 1fr;
+  gap: 2px;
+  width: 100%;
+  min-height: 44px;
+  font-size: 13px;
+  line-height: 130%;
   align-items: center;
-  justify-items: center;
-  align-content: center;
-  padding: 26px;
-  cursor: pointer;
+  border-bottom: 1px solid white;
+}
+
+.maintenance--input--message {
+  align-items: flex-start!important;
+}
+
+
+.maintenance--input-header-bg-scolor {
+  /* background-color: #001eff; */
+  background-color: #001eff7a;
+  border-radius: 0.5rem 0.5rem 0 0;
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+}
+
+.maintenance--input:last-child {
+  border-bottom: 0;
+}
+
+.maintenance--input H2 {
+  padding: 0.5rem;
+  grid-column: 1 / 3;
+}
+
+.maintenance--input label { 
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  padding: 0.5rem;
+}
+
+.maintenance--input form { 
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+.maintenance--input input { 
+  width: 100%;
+  height: 100%;
+  border: 0;
+  outline: -webkit-focus-ring-color auto 0px;
+  padding: 0.5rem;
+  background-color: transparent!important;
   color: white;
-  background-color: #141414;
-  outline: 1px solid #515151;
-  margin: 13px;
-} */
+  text-align: right;
+}
+
+.maintenance--input input:visited { 
+  background: #fff!important;
+}
+
+.maintenance--input button { 
+  width: 100%;
+  height: 100%;
+  grid-column: 1 / 3;
+  border: 0;
+  font-family: inherit;
+  border-radius: 0 0 0.5rem 0.5rem;
+  padding: 0.5rem;
+  text-align: left;
+  cursor: pointer;
+}
+
+.maintenance--input textarea {
+  width: 100%;
+  height: calc(44px * 3);
+  border: 0;
+  background-color: transparent!important;
+  padding: 0.5rem;
+  text-align: right;
+  outline: -webkit-focus-ring-color auto 0px;
+  color: #fff;
+}
+
+.maintenance--input textarea:focus-visible {
+  text-align: right;
+  color: #000;
+  background-color: #fff!important;
+}
+
+.container-countdown--desk {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5REM;
+  align-items: flex-end;
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  width: fit-content;
+  height: fit-content;
+  text-align: right;
+}
+
+.container-countdown--mob {
+  display: none;
+  flex-direction: row;
+  gap: 0.5rem;
+  align-items: flex-start;
+  width: fit-content;
+  height: fit-content;
+  text-align: left;
+}
+
+.maintenance--title-h2 {
+  font-size: 13px;
+  line-height: 130%;
+}
+
+.maintenance--time {
+  font-size: 13px;
+  line-height: 130%;
+}
+
+@media only screen and (max-width: 640px) {
+  .container-countdown--desk {
+    display: none;
+  }
+  .container-countdown--mob {
+    display: flex!important;
+  }
+}
 
 .container-maintenance--copyright {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  position: absolute;
+  left: 1rem;
+  bottom: 1rem;
+  width: fit-content;
+  height: fit-content;
+}
+
+.maintenance--copyright-p {
+  font-size: 13px;
+  line-height: 130%;
+  text-align: left;
+}
+
+.container-maintenance--contact {
   display: flex;
   align-items: flex-end;
   flex-direction: column;
@@ -435,19 +623,128 @@ section {
   bottom: 1rem;
   width: fit-content;
   height: fit-content;
+  cursor: pointer;
 }
-.maintenance--copyright-p {
+
+.container-maintenance--contact:hover .maintenance--contact-h3 {
+  opacity: 0.75;
+  transition: opacity 0.3s;
+}
+
+@media only screen and (max-width: 640px) {
+  .container-maintenance--contact {
+    align-items: flex-end;
+    top: 1rem;
+  }
+}
+.maintenance--contact-h3 {
   font-size: 13px;
   line-height: 130%;
-  text-align: left;
+  opacity: 1;
 }
 
 #contMove {
-  transition: background-color 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  transition: all 0.25s ease-in-out;
   touch-action: none;
 }
 
 #contMove.hidden {
   opacity: 0;
+  pointer-events: none;
 }
 
+
+/* modal css */
+
+.form-slide-left {
+  left: 100vw;
+  transition: left 1s;
+  overflow: hidden;
+}
+
+.form-hide {
+  display: none;
+  opacity: 0!important;
+  transition: opacity 0.75s;
+}
+
+.maintenance--form-marquee-container {
+  display: grid;
+  grid-template-columns: 1fr min-content;
+  gap: 0;
+}
+
+.maintenance--form-marquee-text {
+  width: 100%;
+}
+
+.maintenance--svg-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.maintenance--svg-close {
+  width: auto;
+  height: 13px;
+}
+
+#drawerTriggerMinusSvg {
+  width: 13px;
+  height: inherit;
+}
+
+.maintenance--svg-close path {
+  stroke: #fff;
+}
+
+#maintenance--form-submit {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  padding: 1rem;
+  justify-content: space-between;
+  overflow: hidden;
+  background-color: #ffffffa6;
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+}
+
+.maintenance--input button:hover {
+  /* background-color: var(--background-color-primary); */
+  background-color: #001eff7a!important;
+  backdrop-filter: blur(3px)!important;
+  -webkit-backdrop-filter: blur(3px)!important;
+  color: #fff;
+}
+
+.maintenance--input button:hover svg {
+  stroke: #fff;
+}
+
+.maintenance--svg-container:hover svg {
+  opacity: 0.75;
+}
+
+.maintenance--form-submit--svg {
+  position: relative;
+  height: 13px;
+  width: 13px;
+  fill: none;
+  stroke: #000;
+  left: 0;
+  opacity: 1;
+}
+
+/* .maintenance--form-sbumit--svg:hover {
+  left: 13px;
+  opacity: 0;
+} */
+
+.svg-hide {
+  display: none;
+}
