--- a/styles/styles.css
+++ b/styles/styles.css
@@ -467,7 +467,7 @@ section {
   grid-template-columns: 82px 1fr;
   gap: 2px;
   width: 100%;
-  min-height: 44px;
+  height: 44px;
   font-size: 13px;
   line-height: 130%;
   align-items: center;
@@ -503,6 +503,17 @@ section {
   height: 100%;
   border: 0;
   padding: 0.5rem;
+  outline: 0px!important;
+}
+
+.maintenance--input label:focus-visible {
+  outline: 0px!important;
+  outline-color: none!important;
+}
+
+.maintenance--input label:focus {
+  outline: 0px!important;
+  outline-color: none!important;
 }
 
 .maintenance--input form { 
