--- a/styles/styles.css
+++ b/styles/styles.css
@@ -617,10 +617,15 @@ section {
   text-align: left;
 }
 
+.container-countdown--mob .maintenance--title-h2 {
+  font-size: 13px;
+  line-height: 130%;
+  margin: 0.5rem 0 0.5rem 0.5rem;
+}
+
 .maintenance--title-h2 {
   font-size: 13px;
   line-height: 130%;
-  margin: 0.5rem;
 }
 
 .maintenance--time {
