--- a/styles/styles.css
+++ b/styles/styles.css
@@ -476,6 +476,7 @@ section {
 
 .maintenance--input--message {
   align-items: flex-start!important;
+  padding: 0.75rem 0.5rem;
 }
 
 
@@ -569,7 +570,7 @@ section {
   height: calc(44px * 3);
   border: 0;
   background-color: transparent!important;
-  padding: 0.5rem;
+  padding: 0.75rem 0.5rem;
   text-align: right;
   outline: -webkit-focus-ring-color auto 0px;
   outline: none;
@@ -620,7 +621,7 @@ section {
 .container-countdown--mob .maintenance--title-h2 {
   font-size: 13px;
   line-height: 130%;
-  margin: 0.5rem 0 0.5rem 0.5rem;
+  /* margin: 0.5rem 0 0.5rem 0.5rem; */
 }
 
 .maintenance--title-h2 {
