--- a/styles/styles.css
+++ b/styles/styles.css
@@ -480,7 +480,7 @@ section {
 
 .maintenance--input {
   display: grid;
-  grid-template-columns: 82px 1fr;
+  grid-template-columns: 1fr 82px;
   gap: 2px;
   width: 100%;
   height: 44px;
@@ -505,7 +505,7 @@ section {
 }
 
 .maintenance--input:nth-child(4)  {
-  border-bottom: 0;
+  /* border-bottom: 0; */
   height: calc(44px * 3);
 }
 
@@ -529,6 +529,8 @@ section {
   outline-style: none;
   text-transform: uppercase;
   font-size: 13px;
+  justify-content: flex-end;
+  visibility: hidden;
 }
 
 .maintenance--input label:focus-visible {
@@ -557,7 +559,7 @@ section {
   padding: 0.5rem;
   background-color: transparent!important;
   color: white;
-  text-align: right;
+  text-align: left;
   outline-style: none;
   font-family: inherit;
   font-size: 13px;
@@ -587,7 +589,7 @@ section {
   border: 0;
   background-color: transparent!important;
   padding: 0.75rem 0.5rem;
-  text-align: right;
+  text-align: left;
   outline: -webkit-focus-ring-color auto 0px;
   outline: none;
   color: #fff;
@@ -597,9 +599,9 @@ section {
 }
 
 .maintenance--input textarea:focus-visible {
-  text-align: right;
-  color: #000;
-  background-color: #fff!important;
+  text-align: left;
+  /* color: #000;
+  background-color: #fff!important; */
   outline-color: -webkit-focus-ring-color;
   outline-style: none;
   outline-width: 0;
