--- a/styles/styles.css
+++ b/styles/styles.css
@@ -447,9 +447,11 @@ section {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--background-color-primary);
+  background-color: #14141463;
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
   z-index: 1;
-  opacity: 0.5;
+  opacity: 0.8;
   cursor: pointer;
 }
 
