--- a/styles/styles.css
+++ b/styles/styles.css
@@ -899,3 +899,7 @@ form input[type="email"] {
 .maintenance--uppercase {
   text-transform: uppercase;
 }
+
+form label {
+  pointer-events: none;
+}
