--- a/styles/styles.css
+++ b/styles/styles.css
@@ -672,6 +672,12 @@ section {
   line-height: 130%;
 }
 
+.maintenance--form-title-h3 {
+  font-size: 13px;
+  line-height: 130%;
+  padding: 0.5rem;
+}
+
 .maintenance--time {
   font-size: 13px;
   line-height: 130%;
