--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,8 +16,11 @@ html {
   --header-height-mobile: 58px;
   --header-height-mobile-sm: 58px;
   --footer-height-mob: 230px;
+  --footer-height-tablet: 141px;
   --footer-height-desktop: 108px;
   --header-footer-height-mob: calc(var(--header-height-mobile) + var(--footer-height-mob));
+  --header-footer-height-mob-sm: calc(var(--header-height-mobile-sm) + var(--footer-height-mob));
+  --header-footer-height-tablet: calc(var(--header-height-desktop) + var(--footer-height-tablet));
   --header-footer-height-desktop: calc(var(--header-height-desktop) + var(--footer-height-desktop));
   --header-footer-height-desktop-sm: calc(var(--header-height-desktop-sm) + var(--footer-height-desktop));
   --section-height-sm: 44px;
@@ -34,10 +37,18 @@ html {
   --base-text-sm: 0.85rem;
   --default-line-height: 130%;
   --caps-line-height: 100%;
-  --font-weight-base: 400;
-  --font-weight-bold: 600;
   --color-highlight-1: #001eff;
   --color-highlight-1-transp: #001eff7a;
+
+  --section-border-width: 1px;
+  --section-border-width-minus: -1px;
+
+  --main-font-family: 'neue-haas-grotesk-text', Arial, sans-serif;
+  --display-font-family: 'neue-haas-grotesk-display', Arial, sans-serif;
+
+  --font-weight-base: 400;
+  --font-weight-medium: 500;
+  --font-weight-bold: 700;
 
   --color-primary: #f3f3f3;
   --color-secondary: #0E1419;
@@ -56,7 +67,12 @@ html {
 
 body {
   background-color: var(--background-color-primary);
-  font-family: "Arial", sans-serif;
+  font-family: var(--main-font-family);
+  font-weight: 400;
+  font-style: normal;
+  -webkit-font-feature-settings: 'salt' 1;
+  -moz-font-feature-settings: 'salt' 1;
+  font-feature-settings: 'salt' 1;
   font-size: 1rem;
   color: var(--color-primary);
   transition: all 0.4s ease-in-out;
@@ -67,8 +83,9 @@ body {
 
 main {
   position: relative;
-  height: calc(100vh - var(--header-height-desktop-sm));
-  height: calc(100dvh - var(--header-height-desktop-sm));
+  /* height: calc(100vh - var(--header-height-desktop-sm)); */
+  /* height: calc(100vh - var(--header-height-desktop-sm)); */
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -76,7 +93,8 @@ main {
 
 @media only screen and (max-width: 640px) {
   main {
-    height: calc(100dvh - var(--header-height-desktop-sm));
+    /* height: calc(100vh - var(--header-height-desktop-sm)); */
+    height: 100vh;
   }
 }
 
@@ -161,11 +179,12 @@ header {
 }
 
 section {
+  border-top: var(--section-border-width) solid var(--color-primary);
   position: sticky;
   min-height: calc(100vh - var(--header-height-desktop-sm));
   width: 100%;
   left: 0;
-  top: -1px;
+  top: var(--section-border-width-minus);
   padding: 1rem;
   z-index: 1;
 }
@@ -213,12 +232,13 @@ section {
   justify-content: flex-end;
   position: -webkit-sticky;
   position: sticky;
+  /* bottom: var(--section-border-width); */
   bottom: 0;
   z-index: 0;
   flex-grow: 1;
   flex-direction: column;
   align-items: flex-start;
-  border-top: 1px solid var(--color-primary);
+  border-top: var(--section-border-width) solid var(--color-primary);
   z-index: 3;
 }
 
@@ -226,15 +246,32 @@ section {
   padding: 1rem;
   display: grid;
   grid-auto-columns: minmax(auto, 1fr);
-  gap: 1rem;
+  column-gap: 1rem;
+  row-gap: 1rem;
   justify-content: flex-start;
   z-index: 0;
   width: -webkit-fill-available;
   align-items: end;
   background-color: var(--background-color-primary);
+  font-weight: var(--font-weight-base);
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 840px) {
+  .footer--col-1 {
+    grid-column: 1 / 2!important;
+  }
+
+  .footer--col-2 {
+    grid-column: 2 / 3!important;
+  }
+  .maintenance--version-container {
+    grid-column: 1 / 3!important;
+    grid-row: 2!important;
+    align-items: flex-start!important;
+  }
+}
+
+@media only screen and (max-width: 520px) {
   .container--footer {
     flex-direction: column;
     align-items: flex-start;
@@ -242,27 +279,49 @@ section {
   .maintenance--version-container {
     align-items: flex-start!important;
   }
-  .footer--col {
+  .footer--col-1 {
+    grid-column: unset!important;
+    grid-row: unset!important;
+  }
+  .footer--col-2 {
     grid-column: unset!important;
     grid-row: unset!important;
   }
   .maintenance--version-container {
     grid-column: unset!important;
     grid-row: unset!important;
+    /* align-items: flex-end!important; */
   }
 }
 
-/* @media only screen and (min-width: 1100px) {
+@media only screen and (max-width: 840px) {
   .footer--content {
-    display: flex!important;
+    column-gap: 1rem;
+    row-gap: 2rem;
   }
-} */
+}
 
-.footer--col {
+@media only screen and (max-width: 520px) {
+  .footer--content {
+    column-gap: 1rem;
+    row-gap: 1rem;
+  }
+}
+
+.footer--col-1 {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   grid-row: 1;
+  grid-column: 1 / 3;
+}
+
+.footer--col-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  grid-row: 1;
+  grid-column: 2 / 4;
 }
 
 .container-maintenance--ul {
@@ -306,7 +365,7 @@ section {
   display: flex;
   padding: 1rem;
   width: 100%;
-  border-top: 1px solid var(--color-primary);
+  /* border-top: var(--section-border-width) solid var(--color-primary); */
   min-height: var(--section-height-sm);
   align-items: center;
   background-color: var(--background-color-primary);
@@ -352,7 +411,7 @@ section {
 
 .footer--info-li--copyright-desk {
   grid-row: 1;
-  grid-column: 3;
+  grid-column: 3 / 5;
   font-size: var(--base-text);
   line-height: var(--default-line-height);
   white-space: nowrap;
@@ -380,9 +439,20 @@ section {
   font-size: var(--base-text);
   line-height: var(--default-line-height);
   white-space: nowrap;
+  grid-column: 4 / 5;
+  grid-row: 1;
+  text-align: right;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 840px) {
+  .maintenance--version-history {
+    grid-column: 2 / 3;
+    grid-row: 2;
+    text-align: left;
+  }
+}
+
+@media only screen and (max-width: 520px) {
   .maintenance--version-history {
     position: absolute;
     bottom: 0.5rem;
@@ -391,8 +461,11 @@ section {
     transform-origin: top right;
     line-height: 100%;
     text-align: right;
+    grid-column: unset;
+    grid-row: unset;
   }
 }
+
 .maintenance--game-container {
   position: fixed;
   display: flex;
@@ -421,7 +494,7 @@ section {
   text-transform: uppercase;
   font-size: 1.5rem;
   border-radius: 100px;
-  border: 1px solid var(--game-btn-outline);
+  border: var(--section-border-width) solid var(--game-btn-outline);
   width: fit-content;
   height: fit-content;
   overflow: hidden;
@@ -471,12 +544,13 @@ section {
   width: 360px;
   height: fit-content;
   text-align: left;
-  border: 1px solid var(--color-primary);
+  border: var(--section-border-width) solid var(--color-primary);
   border-radius: 0.25rem;
   z-index: 3;
   background-color: var(--background-color-primary-transp-glass-2);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(3px);
+  font-weight: var(--font-weight-base);
 }
 
 .maintenance--form-holder {
@@ -528,7 +602,7 @@ section {
   font-size: var(--base-text);
   line-height: var(--default-line-height);
   align-items: baseline;
-  border-bottom: 1px solid var(--color-primary);
+  border-bottom: var(--section-border-width) solid var(--color-primary);
 }
 
 .maintenance--input--message {
@@ -562,7 +636,7 @@ section {
 .maintenance--input label { 
   display: flex;
   align-items: center;
-  width: fit-content;
+  width: 131px;
   height: 100%;
   border: 0;
   padding: 0.5rem;
@@ -676,6 +750,7 @@ section {
 
 .maintenance--time {
   font-size: var(--base-text);
+  font-weight: var(--font-weight-base);
   line-height: var(--caps-line-height);
   text-transform: uppercase;
 }
@@ -704,6 +779,7 @@ section {
   width: 100%;
   height: fit-content;
   grid-row: 1;
+  grid-column: 4;
 }
 
 @media only screen and (max-width: 640px) {
@@ -737,7 +813,7 @@ section {
   .container-maintenance--contact {
     align-items: center;
     border-radius: 0.25rem;
-    border: 1px solid var(--color-primary);
+    border: var(--section-border-width) solid var(--color-primary);
     padding: 0.5rem;
     width: fit-content;
   }
@@ -825,10 +901,27 @@ section {
   stroke-width: 1.5px;
 }
 
+.logotype--svg-container {
+  position: sticky;
+  top: 1rem;
+  width: 100%;
+  height: fit-content;
+  grid-column: 1 / 3;
+  grid-row: 1;
+  align-self: end;
+  padding-bottom: 0.5rem;
+}
+
+.logotype--svg {
+  width: 100%;
+  height: auto;
+  fill: var(--color-primary);
+}
+
 .maintenance--svg-close {
   width: 17px;
   height: 17px;
-  /* stroke-width: 1.5px; */
+  stroke-width: var(--section-border-width);
 }
 
 .maintenance--svg-close-2 {
@@ -838,14 +931,17 @@ section {
 
 .maintenance--svg-close-2 path {
   stroke: var(--color-primary);
+  stroke-width: var(--section-border-width);
 }
 
 #closeMinus.maintenance--svg-close-2 path {
   stroke: var(--color-secondary);
+  stroke-width: var(--section-border-width);
 }
 
 .maintenance--svg-close-minus path {
   stroke: var(--color-secondary);
+  stroke-width: var(--section-border-width);
 }
 
 #drawerTriggerMinusSvg {
@@ -948,6 +1044,18 @@ input:autofill {
   grid-column: 4;
 }
 
+.grid-col-1-3 {
+  grid-column: 1 / 3;
+}
+
+.grid-col-2-4 {
+  grid-column: 2 / 4;
+}
+
+.grid-col-3-5 {
+  grid-column: 3 / 5;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -996,7 +1104,7 @@ input:autofill {
   display: flex;
   gap: 0.5rem;
   padding: 0.5rem 0.25rem;
-  border: 1px solid var(--color-primary);
+  border: var(--section-border-width) solid var(--color-primary);
   border-radius: 0.5rem;
   height: 16px;
   align-items: center;
@@ -1006,7 +1114,7 @@ input:autofill {
 
 .mode-switch--btn {
   border-radius: 0.75rem;
-  border: 1px solid var(--color-primary);
+  border: var(--section-border-width) solid var(--color-primary);
   width: 0.5rem;
   height: 0.5rem;
 }
@@ -1015,7 +1123,7 @@ input:autofill {
   .mode-switch--btn {
     /* height: 1.5rem; */
     border-radius: 0.75rem;
-    border: 1px solid var(--color-primary);
+    border: var(--section-border-width) solid var(--color-primary);
     width: 0.5rem;
     height: 0.5rem;
   }
@@ -1062,33 +1170,57 @@ input:autofill {
 }
 
 .section--two-column {
-  border-top: 1px solid var(--color-primary);
+  border-bottom: var(--section-border-width) solid var(--color-primary);
   display: grid;
+  /* grid-auto-columns: minmax(auto, 1fr); */
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: auto;
+  gap: 1rem;
   z-index: 1;
   background-color: var(--background-color-primary);
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
-  min-height: calc(100vh - var(--footer-height-desktop) + 0.5rem + 3px);
+  /* min-height: calc(100vh - var(--footer-height-desktop) + 0.5rem + 3px); */
+  /* min-height: calc(100vh - var(--header-footer-height-desktop-sm)); */
+  /* min-height: calc(100vh - var(--header-height-desktop-sm)); */
+  /* min-height: calc(100vh - var(--header-height-desktop-sm)); */
+  min-height: calc(100vh - var(--header-height-desktop-sm) - var(--section-height-sm));
+}
+
+@media only screen and (max-width: 840px) {
+  .section--two-column {
+    min-height: calc(100vh - var(--header-height-desktop-sm) - var(--section-height-sm));
+  }
+  .logotype--svg-container {
+    padding-bottom: 3rem;
+  }
 }
 
 @media only screen and (max-width: 640px) {
   .section--two-column {
-    min-height: calc(100vh - var(--footer-height-mob) + 1rem + 3px);
+    /* min-height: calc(100vh - var(--section-height-sm) - var(--footer-height-desktop)); */
+    min-height: calc(100vh - var(--header-height-mobile-sm) - var(--section-height-sm));
+  }
+  .logotype--svg-container {
+    padding-bottom: 3rem;
   }
 }
 
 .two-column--content {
+  position: sticky;
+  top: 1rem;
   grid-row: 1;
   grid-column: 1 / 2;
+  height: fit-content;
 }
 
 .opener {
   font-size: 1.5rem;
+  font-family: var(--display-font-family);
+  font-weight: var(--font-weight-medium);
 } 
 
 @media only screen and (max-width: 640px) {
   .opener {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
   } 
 }
 
