--- a/styles/styles.css
+++ b/styles/styles.css
@@ -78,7 +78,7 @@ body {
   transition: all 0.4s ease-in-out;
   min-height: 100vh;
   margin: 0;
-  overscroll-behavior: none;
+  /* overscroll-behavior: none; */
 }
 
 main {
@@ -1190,7 +1190,7 @@ input:autofill {
     min-height: calc(100vh - var(--header-height-desktop-sm) - var(--section-height-sm));
   }
   .logotype--svg-container {
-    padding-bottom: 3rem;
+    padding-bottom: 2rem;
   }
 }
 
@@ -1201,6 +1201,12 @@ input:autofill {
   }
   .logotype--svg-container {
     padding-bottom: 3rem;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  .logotype--svg-container {
+    padding-bottom: 4rem;
   }
 }
 
